# cs229-proj

./: .gitignore  README.md  config.toml  datasets.toml  dep_tokenizer.json  evaluate.py  feat_tokenizer.json  generate_tk.py  install_rust_backend.sh  requirements.txt  temp.py  text_tokenizer.json  train.py  try.ipynb
md2txt/: .gitignore  Cargo.toml  md2txt.pyi  pyproject.toml
md2txt/src/: lib.rs
metrics/: hamming.py  metrics.py
model/: bert_fine_tune.py  bert_fine_tune_trainer.py  criterion.py  dep.py  logistic.py  loss.py  lstm.py  naive_bayes.py  nn.py  trainer.py  trivial.py  word_bag.py  word_bag_trainer.py
preprocess/: dataset.py  fetch.py  prepare.py  tokenize.py  word_bag.py
utils/: cache.py  config.py  data.py  devices.py  snapshots.py  temp.py
visuals/: visualize.py
visuals/time_series/train_accept/: train_accept_distilbert.csv  train_accept_logistic_0.01.csv  train_accept_logistic_0.1.csv  train_accept_logistic_0.5.csv  train_accept_logistic_1.csv  train_accept_logistic_5.csv  train_accept_nn_0.01.csv  train_accept_nn_0.1.csv  train_accept_nn_0.5.csv  train_accept_nn_1.csv  train_accept_nn_5.csv
visuals/time_series/train_f1/: train_f1_distilbert.csv  train_f1_logistic_0.01.csv  train_f1_logistic_0.1.csv  train_f1_logistic_0.5.csv  train_f1_logistic_1.csv  train_f1_logistic_5.csv  train_f1_nn_0.01.csv  train_f1_nn_0.1.csv  train_f1_nn_0.5.csv  train_f1_nn_1.csv  train_f1_nn_5.csv
visuals/time_series/val_accept/: val_accept_distilbert.csv  val_accept_logistic_0.01.csv  val_accept_logistic_0.1.csv  val_accept_logistic_0.5.csv  val_accept_nn_1.csv  (+6 more)
(+11 files in other folders)
